rename title of HowTo_Handle_Image

--- a/src/[TF] HowTo_Handle_Image.ipynb
+++ b/src/[TF] HowTo_Handle_Image.ipynb
@@ -451,7 +451,7 @@
    ],
    "source": [
     "# Because the shape of image_gray is [h, w, 1] and imshow will got a TypeError: Invalid dimensions for image data\n",
-    "# So convert twice to let imshow could disply image correctly.\n",
+    "# So convert twice so that let imshow could disply image correctly.\n",
     "image_gray = tf.image.rgb_to_grayscale(image3)\n",
     "image_gray = tf.image.grayscale_to_rgb(image_gray)\n",
     "\n",
